quickstart/config-sync/policies/cis/cis-k8s-v1.5.1/5.4.1_no-secrets-as-env-vars.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoEnvVarSecrets
metadata: # kpt-merge: /cis-k8s-v1.5.1-no-secrets-as-env-vars
  name: cis-k8s-v1.5.1-no-secrets-as-env-vars
  labels:
    policycontroller.gke.io/bundleName: cis-k8s-v1.5.1
  annotations:
    # This constraint is not certified by CIS.
    policycontroller.gke.io/constraintData: |
      "{
        bundleName: 'cis-k8s-v1.5.1',
        bundleDisplayName: 'CIS Kubernetes Benchmark v1.5.1',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cis-k8s-benchmark',
        bundleVersion: '202211.2',
        bundleDescription: 'Use the CIS Kubernetes Benchmark 1.5.1 policy bundle with Anthos Policy Controller to evaluate the compliance of your cluster resources against the CIS Kubernetes Benchmark, which is a set of recommendations for configuring Kubernetes to support a robust security posture.',
        controlNumbers: '[5.4.1]',
        severity: 'UNASSIGNED',
        description: 'Restricts the use of secrets as environment variables in container definitions; instead, use mounted secret files in data volumes.',
        remediation: 'Container definitions cannot use secrets as environment variables. Use a mounted secret file in a data volume. See "Using Secrets as files from a Pod" for more information https://kubernetes.io/docs/concepts/configuration/secret/#using-secrets-as-files-from-a-pod',
        minimumTemplateLibraryVersion: '1.10.2'
      }"
    internal.kpt.dev/upstream-identifier: 'constraints.gatekeeper.sh|K8sNoEnvVarSecrets|default|cis-k8s-v1.5.1-no-secrets-as-env-vars'
spec:
  enforcementAction: dryrun
  match:
    excludedNamespaces:
      - config-management-system
      - gke-connect
      - kube-system
